import org.apache.tools.ant.filters.ReplaceTokens

group 'com.btk5h.skript-mirror'
version '2.6.3'

apply plugin: 'java'

repositories {
	mavenCentral()
	maven { url 'https://repo.papermc.io/repository/maven-public/' }
	maven { url 'https://repo.skriptlang.org/releases' }
}

processResources {
	filter ReplaceTokens, tokens: [
		"version": version
	]
}

java {
	toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

dependencies {
	compileOnly group: 'io.papermc.paper', name: 'paper-api', version: '1.21.10-R0.1-SNAPSHOT'
	compileOnly group: 'com.github.SkriptLang', name: 'Skript', version: '2.14.0'
	compileOnly group: 'org.ow2.asm', name: 'asm', version: '9.9'
}
